# ai_orchestrator

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  .mcp.json  .watchfilesignore  CLAUDE.md  Dockerfile  GUIDELINE.md  PLAN.md  SOLUTION.html  SOLUTION.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/present/: SKILL.md
agents/: __init__.py  analyser.py  base.py  deploy.py  engineer.py  pm.py  qa.py  retrospective.py  reviewer.py  security.py  spec_analyze.py  task_decompose.py
api/: main.py  project_store.py  routes.py  schemas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentTimeline.tsx  ArtifactList.tsx  PipelineForm.tsx  ProjectsBrowser.tsx  SpecReview.tsx  StatusBadge.tsx  TestReport.tsx
frontend/src/hooks/: usePipeline.ts  useProjects.ts  useSSE.ts
frontend/src/test/: ui.test.tsx
frontend/src/types/: index.ts
mcp_server/: server.py
orchestrator/: context.py  graph.py  runner.py
orchestrator/backends/: __init__.py  api_backend.py  base.py  claude_code_backend.py
projects/hello_django/: README.md
projects/hello_django/hello/: apps.py  models.py  tests.py  urls.py  (+1 more)
research/: 01-frameworks.md  02-orchestration-patterns.md  03-mcp-vscode-integration.md  04-dual-mode-api-vs-claude-code.md  05-frontend-ui-repos.md  06-sdd-methodology.md  07-cline-openclaw.md  08-paperclip.md  09-enterprise-checklist.md  README.md
tests/: test_backends.py  test_context.py  test_graph.py
tools/: definitions.py
(+14 files in other folders)
