[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Orchestration
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",   # AsyncPostgresSaver (PostgreSQL)
    "psycopg[binary,pool]>=3.1",

    # LLM
    "anthropic>=0.40",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # MCP
    "fastmcp>=0.4",

    # Utilities
    "python-dotenv>=1.0",
    "pydantic>=2.0",

    # Security agent — static analysis + dependency audit
    "bandit>=1.7",
    "pip-audit>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
orchestrator = "orchestrator.runner:main"

[tool.setuptools.packages.find]
include = ["orchestrator*", "agents*", "api*", "mcp_server*", "tools*"]
exclude = ["frontend*", "research*", "tests*", "artifacts*", "projects*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_classes = ["Test"]          # only collect classes named exactly "Test*", not "TestReport"
python_files = ["test_*.py"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore:The default value of",          # LangGraph allowed_objects deprecation
    "ignore:::langgraph.cache.base",         # all warnings from that module
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
